--- a/configs/ds_config_bf16.json
+++ b/configs/ds_config_bf16.json
@@ -1,13 +1,35 @@
 {
-  "train_batch_size": 16,
+  "train_micro_batch_size_per_gpu": 16,
+  "train_batch_size": 128, 
   "gradient_accumulation_steps": 1,
   "optimizer": {
     "type": "AdamW",
-    "params": { "lr": 0.0001, "betas": [0.9, 0.999], "eps": 1e-8, "weight_decay": 0.001 }
+    "params": { "lr": 0.00016, "betas": [0.9, 0.95], "eps": 1e-8, "weight_decay": 0.01 }
   },
   "bf16": { "enabled": true },
   "fp16": { "enabled": false },
-  "zero_optimization": { "stage": 1 },
-  "scheduler": { "type": "WarmupLR", "params": { "warmup_min_lr": 1e-4, "warmup_max_lr": 3e-4, "warmup_num_steps": 1000 } }
+  "gradient_clipping": 1.0,
+  "zero_optimization": {
+    "stage": 2,                       
+    "allgather_partitions": true,
+    "reduce_scatter": true,
+    "overlap_comm": true,
+    "contiguous_gradients": true
+  },
+  "scheduler": {
+    "type": "WarmupDecayLR",                  
+    "params": {
+      "warmup_min_lr": 0.0,
+      "warmup_max_lr": 0.00015,
+      "warmup_num_steps": 0.05,            
+      "total_num_steps": 2000          
+    }
+  },
+  "activation_checkpointing": {
+    "partition_activations": true,
+    "contiguous_memory_optimization": true,
+    "cpu_checkpointing": false
+  },
+  "wall_clock_breakdown": true
 }
 
