--- a/configs/train_default.yaml
+++ b/configs/train_default.yaml
@@ -17,6 +17,10 @@ dataset:
   aug_speed_min: 0.9
   aug_speed_max: 1.1
   aug_mask_prob: 0.05
+  pad_last: true  # pad last frame for sliding window, otherwise drop it
+  min_reserved_ratio: 0.6  # ensure at least this ratio of frames are kept after conf thresholding
+  window: 32
+  stride: 16
 
 model:
   parts: ["body", "face", "left_hand", "right_hand", "fullbody"]
