--- a/configs/ds_config_bf16.json
+++ b/configs/ds_config_bf16.json
@@ -1,11 +1,11 @@
 {
-	"train_micro_batch_size_per_gpu": 2,
-	"train_batch_size": 2,
+	"train_micro_batch_size_per_gpu": 8,
+	"train_batch_size": 64,
 	"gradient_accumulation_steps": 1,
 	"optimizer": {
 		"type": "AdamW",
 		"params": {
-			"lr": 0.0005,
+			"lr": 1e-4,
 			"betas": [0.9, 0.95],
 			"eps": 1e-8,
 			"weight_decay": 0.01
@@ -25,8 +25,8 @@
 		"type": "WarmupDecayLR",
 		"params": {
 			"warmup_min_lr": 0.0,
-			"warmup_max_lr": 0.0005,
-			"warmup_num_steps": 2500,
+			"warmup_max_lr": 1e-4,
+			"warmup_num_steps": 5000,
 			"total_num_steps": 40000
 		}
 	},
