--- a/configs/train_default_stage2.yaml
+++ b/configs/train_default_stage2.yaml
@@ -1,12 +1,12 @@
 train:
   seed: 3407
-  epochs: 5
+  epochs: 15
   log_logits: true
   log_interval: 500
   val_interval: 200
   save_dir_root: runs
-  save_every: 1000
-  resume_from: ""
+  save_every: 1200
+  resume_from: "/workspace/rslt/runs/20250930_165650/checkpoints"
 
 dataset:
   data_dir: /2023234331/data/shm/format_data/csl_shm
@@ -17,7 +17,7 @@ dataset:
   aug_speed_max: 1.1
   aug_mask_prob: 0.05
   pad_last: true
-  min_reserved_ratio: 1.0
+  min_reserved_ratio: 0.6
   window: 32
   stride: 16
 
@@ -49,7 +49,7 @@ llm:
   model_name_or_path: /workspace/Qwen
   trust_remote_code: true
   max_text_len: 128
-  freeze_lm: true
+  freeze_lm: false
   gradient_checkpointing: false
   boc_token: "<BOC>"
   eoc_token: "<EOC>"
