--- a/configs/train_default_stage2.yaml
+++ b/configs/train_default_stage2.yaml
@@ -3,10 +3,12 @@ train:
   epochs: 15
   log_logits: true
   log_interval: 500
-  val_interval: 200
+  val_interval: 250
   save_dir_root: runs
   save_every: 1200
-  resume_from: "/workspace/rslt/runs/20250930_165650/checkpoints"
+  resume_from: "/workspace/rslt/runs/20250930_165650/checkpoints" # modify this
+  visual_lr: 1e-5
+  llm_lr: 1e-6
 
 dataset:
   data_dir: /2023234331/data/shm/format_data/csl_shm
