--- a/configs/train_default_stage2.yaml
+++ b/configs/train_default_stage2.yaml
@@ -6,7 +6,9 @@ train:
   val_interval: 250
   save_dir_root: runs
   save_every: 1200
-  resume_from: "/workspace/rslt/runs/20250930_165650/checkpoints" # modify this
+  resume_from: "/workspace/rslt/runs/stage1/20251001_153225/checkpoints" # modify this
+  ckpt_tag: "global_step20000" # specify the checkpoint tag to load, e.g. "global_step1000", or leave it as an empty string to load the latest checkpoint
+  resume_for_new_stage: true # if true, will load model weights but not optimizer, lr_scheduler states
   visual_lr: 1e-5
   llm_lr: 1e-6
 
