--- a/configs/train_default_stage2.yaml
+++ b/configs/train_default_stage2.yaml
@@ -59,6 +59,9 @@ llm:
   eoc_token: "<EOC>"
   bot_token: "<BOT>"
   eot_token: "<EOT>"
+  contrastive_tau: 0.07
+  contrastive_neg_k: 64
+  contrastive_alpha: 0.0
 
 decoding:
   max_new_tokens: 64
