--- a/configs/train_default.yaml
+++ b/configs/train_default.yaml
@@ -4,7 +4,7 @@ train:
   log_logits: true
   log_interval: 1000
   val_interval: 200
-  save_dir_root: runs/stage1
+  save_dir_root: runs
   save_every: 1000
   resume_from: ""
 
