--- a/configs/train_default_stage2.yaml
+++ b/configs/train_default_stage2.yaml
@@ -1,13 +1,13 @@
 train:
   seed: 3407
-  epochs: 15
-  log_logits: true
+  epochs: 20
+  log_logits: false
   log_interval: 500
   val_interval: 250
   save_dir_root: runs
   save_every: 1200
-  resume_from: "/workspace/rslt/runs/stage1/20251001_153225/checkpoints" # modify this
-  ckpt_tag: "global_step20000" # specify the checkpoint tag to load, e.g. "global_step1000", or leave it as an empty string to load the latest checkpoint
+  resume_from: "/workspace/rslt/runs/20251002_190259" # modify this
+  ckpt_tag: "" # specify the checkpoint tag to load, e.g. "global_step1000", or leave it as an empty string to load the latest checkpoint
   resume_for_new_stage: true # if true, will load model weights but not optimizer, lr_scheduler states
   visual_lr: 1e-5
   llm_lr: 1e-6
@@ -21,7 +21,7 @@ dataset:
   aug_speed_max: 1.1
   aug_mask_prob: 0.05
   pad_last: true
-  min_reserved_ratio: 0.6
+  min_reserved_ratio: 0.75
   window: 32
   stride: 16
 
