--- a/configs/train_default_stage2.yaml
+++ b/configs/train_default_stage2.yaml
@@ -9,8 +9,8 @@ train:
   resume_from: "/workspace/rslt/runs/20251002_190259" # modify this
   ckpt_tag: "" # specify the checkpoint tag to load, e.g. "global_step1000", or leave it as an empty string to load the latest checkpoint
   resume_for_new_stage: true # if true, will load model weights but not optimizer, lr_scheduler states
-  visual_lr: 1e-5
-  llm_lr: 1e-6
+  visual_lr: 5e-5  # Keep Stage 1 LR - visual encoder should keep improving
+  llm_lr: 5e-8     # Very small LR (1000x smaller) - LLM only does light adaptation
 
 dataset:
   data_dir: /2023234331/data/shm/format_data/csl_shm
@@ -46,7 +46,7 @@ model:
   chunk_transformer:
     layers: 3
     heads: 8
-    dropout: 0.1
+    dropout: 0.15  # Increased from 0.1 for regularization
     mlp_dim: 512
 
 llm:
@@ -61,7 +61,7 @@ llm:
   eot_token: "<EOT>"
   contrastive_tau: 0.07
   contrastive_neg_k: 64
-  contrastive_alpha: 0.0
+  contrastive_alpha: 0.1  # Keep contrastive learning to constrain visual features
 
 decoding:
   max_new_tokens: 64
