some config update

--- a/configs/train_default_stage2.yaml
+++ b/configs/train_default_stage2.yaml
@@ -6,8 +6,8 @@ train:
   val_interval: 600
   save_dir_root: runs
   save_every: 1200
-  resume_from: "/workspace/rslt/runs/robust/20251006_065837/checkpoints" # modify this
-  ckpt_tag: "" # specify the checkpoint tag to load, e.g. "global_step1000", or leave it as an empty string to load the latest checkpoint
+  resume_from: "/workspace/rslt/runs/new/20251008_174533" # modify this
+  ckpt_tag: "best" # specify the checkpoint tag to load, e.g. "global_step1000", or leave it as an empty string to load the latest checkpoint
   resume_for_new_stage: true # if true, will load model weights but not optimizer, lr_scheduler states
   visual_lr: 5e-5  # Keep Stage 1 LR - visual encoder should keep improving
   llm_lr: 1e-7     # Very small LR (1000x smaller) - LLM only does light adaptation
@@ -21,12 +21,12 @@ dataset:
   aug_speed_max: 1.1
   aug_mask_prob: 0.05
   pad_last: true
-  min_reserved_ratio: 0.75
-  window: 60
-  stride: 20
+  min_reserved_ratio: 0.8
+  window: 30
+  stride: 30
 
 data:
-  batch_size: 4
+  batch_size: 8
   num_workers: 4
   conf_threshold: 0.1
   T: 32
@@ -37,7 +37,7 @@ model:
   parts: ["body", "face", "left_hand", "right_hand", "fullbody"]
   drop_conf: true
   part_embed_dim: 256
-  tokens_per_chunk: 16
+  tokens_per_chunk: 12
   uni_gcn:
     proj_dim: 256
     temporal_kernel: 7
@@ -61,13 +61,13 @@ llm:
   eot_token: "<EOT>"
   contrastive_tau: 0.07
   contrastive_neg_k: 128
-  contrastive_alpha: 0.1  # Keep contrastive learning to constrain visual features
+  contrastive_alpha: 0.2  # Keep contrastive learning to constrain visual features
   diversity_alpha: 0.1
 
 decoding:
   max_new_tokens: 64
   do_sample: true
   temperature: 0.3
-  top_k: 10
+  top_k: 15
 
 nclass: 10
