--- a/configs/train_cslnews_stage2.yaml
+++ b/configs/train_cslnews_stage2.yaml
@@ -2,16 +2,18 @@ train:
   seed: 3407
   epochs: 10 
   log_logits: false
-  log_interval: 100000
-  val_interval: 100000
+  log_interval: 75000
+  val_interval: 75000
   save_dir_root: runs
-  save_every: 100000
-  resume_from: '/workspace/rslt/runs/20251013_113232/checkpoints' # modify this
+  save_every: 75000
+  resume_for_new_stage: true
+  resume_from: '/workspace/rslt/runs/window64/20251019_090217/checkpoints' # modify this
   ckpt_tag: "best" # specify the checkpoint tag to load, e.g. "global_step1000", or leave it as an empty string to load the latest checkpoint
   visual_lr: 1e-5 # 略微降低学习率，稳定训练
   llm_lr: 5e-7 
 
 dataset:
+  dtype: bfloat16
   data_dirs: /2023234331/data/csl_news
   have_sub_dirs: true
   seed: 3407
@@ -21,9 +23,9 @@ dataset:
   aug_speed_max: 1.2
   aug_mask_prob: 0.15
   pad_last: true
-  min_reserved_ratio: 0.8
-  window: 45
-  stride: 30
+  min_reserved_ratio: 0.75
+  window: 64
+  stride: 32
 
 data:
   batch_size: 8
@@ -42,7 +44,7 @@ model:
   - fullbody
   drop_conf: true
   part_embed_dim: 256
-  tokens_per_chunk: 12
+  tokens_per_chunk: 10
   uni_gcn:
     proj_dim: 256
     temporal_kernel: 7
@@ -68,8 +70,8 @@ llm:
   contrastive_neg_k: 256
   contrastive_projection_dim: 256 # Dimension of the contrastive projection head
   # --- 关键改动：同时使用对比损失和多样性损失 ---
-  contrastive_alpha: 0.1 # TODO: 调整对比损失权重
-  diversity_alpha: 0.1   # TODO: 调整多样性损失权重
+  contrastive_alpha: 0.0 # TODO: 调整对比损失权重
+  diversity_alpha: 0.0   # TODO: 调整多样性损失权重
   compute_special_token_loss: false # TODO: 是否计算特殊token的损失
 
 decoding:
